[gd_scene load_steps=5 format=3 uid="uid://dtk45t4c3ydxm"]

[ext_resource type="Script" uid="uid://cdl4y4bhpuveu" path="res://Buildings/mine.gd" id="1_mine"]
[ext_resource type="Texture2D" uid="uid://cdwugf6mugjfi" path="res://Textures/mine.png" id="2_01ouk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mine_body"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_mine_trigger"]
radius = 60.0

[node name="Mine" type="StaticBody2D" groups=["building"]]
collision_layer = 128
collision_mask = 0
script = ExtResource("1_mine")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -8.0
offset_right = 10.0
offset_bottom = 8.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3, 0)
scale = Vector2(0.018, 0.018)
texture = ExtResource("2_01ouk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mine_body")

[node name="TriggerArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="TriggerCollisionShape" type="CollisionShape2D" parent="TriggerArea"]
shape = SubResource("CircleShape2D_mine_trigger")

[node name="ExplosionRadiusIndicator" type="Node2D" parent="."]

[node name="FuseTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.5
